--- a/index.html
+++ b/index.html
@@ -22,4 +22,6 @@
 	<li>email: <a href="https://github.com/surfpals">joshchambers85@yahoo.com</a></li>
 	<li>github: surfpals</li>
 </ul>
+<hr>
+<h3>Thanks for stopping by!</h3>
 </html>
